--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -1,10 +1,9 @@
 ## Process this file with automake to produce Makefile.in
 
-AM_CFLAGS     = -I$(top_srcdir) -I$(top_builddir)
-AM_CFLAGS    += -I$(top_srcdir)/lib -I$(top_builddir)/lib
-AM_FCFLAGS    = -I$(top_srcdir) -I$(top_builddir)
-AM_FCFLAGS   += -I$(top_srcdir)/lib -I$(top_builddir)/lib
-AM_LDFLAGS         =
+AM_CFLAGS          =
+AM_CPPFLAGS        = -I$(top_srcdir)/lib -I$(top_builddir)/lib
+AM_FCFLAGS         = -I$(top_srcdir)/lib -I$(top_builddir)/lib
+AM_LDFLAGS         = -L$(top_builddir)/lib
 bin_PROGRAMS       = # Append below
 check_PROGRAMS     = # Append below
 lib_LTLIBRARIES    = # Append below
@@ -14,9 +13,9 @@ pkginclude_HEADERS = # Append below
 BUILT_SOURCES      = # Append below
 CLEANFILES         = # Append below
 
-# Use parallel HDF5 compiler wrappers per configure.ac
-CC=@H5CC@
-FC=@H5FC@
+# Use MPI compiler wrappers since HDF5 wrappers break autodependencies.
+CC=@MPICC@
+FC=@MPIFC@
 
 # Headers shipped with the library
 pkginclude_HEADERS += error.h
@@ -34,17 +33,18 @@ libesio_la_SOURCES   = # Required even if empty
 libesio_la_LIBADD    = libesio_c.la libesio_f.la
 
 # C sources to place into the public library
-noinst_LTLIBRARIES   += libesio_c.la
-libesio_c_la_SOURCES  = error.c
-libesio_c_la_SOURCES += esio.c
-libesio_c_la_SOURCES += layout.c
-libesio_c_la_SOURCES += metadata.c
-layout.o: plane.c line.c layout.c layout0.c layout1.c
+noinst_LTLIBRARIES    += libesio_c.la
+libesio_c_la_CFLAGS    = $(HDF5_CFLAGS)
+libesio_c_la_CPPFLAGS  = $(HDF5_CPPFLAGS)
+libesio_c_la_SOURCES   = error.c
+libesio_c_la_SOURCES  += esio.c
+libesio_c_la_SOURCES  += layout.c
+libesio_c_la_SOURCES  += metadata.c
 
 # Fortran sources to place into the public library
-noinst_LTLIBRARIES        += libesio_f.la
-libesio_f_la_SOURCES       = esio.f90
-libesio_f_la_LIBTOOLFLAGS  = --tag=FC
+noinst_LTLIBRARIES   += libesio_f.la
+libesio_f_la_FCFLAGS  = $(AM_FCFLAGS) $(HDF5_FFLAGS)
+libesio_f_la_SOURCES  = esio.f90
 
 # Extra things to clean up
 clean-local:
