--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,11 +1,12 @@
 ## Process this file with automake to produce Makefile.in
 
-AM_CFLAGS       = -I$(top_srcdir) -I$(top_builddir)
-AM_CFLAGS      += -I$(top_srcdir)/lib -I$(top_builddir)/lib
-AM_FCFLAGS      = -I$(top_srcdir) -I$(top_builddir)
+AM_CFLAGS       =
+AM_CPPFLAGS     = -I$(top_srcdir)     -I$(top_builddir)
+AM_CPPFLAGS    += -I$(top_srcdir)/lib -I$(top_builddir)/lib
+AM_FCFLAGS      = -I$(top_srcdir)     -I$(top_builddir)
 AM_FCFLAGS     += -I$(top_srcdir)/lib -I$(top_builddir)/lib
-AM_FCFLAGS     += -I$(top_srcdir)/esio -I$(top_builddir)/esio
-AM_LDFLAGS      = # Append below
+AM_FCFLAGS     += -I$(top_builddir)/esio
+AM_LDFLAGS      = -L$(top_builddir)/lib
 bin_PROGRAMS    = # Append below
 check_PROGRAMS  = # Append below
 noinst_HEADERS  = fct.h
@@ -18,24 +19,27 @@ TESTS              = # Append below
 TESTS_ENVIRONMENT  = ESIO_TEST_INPUT_DIR=$(srcdir)
 TESTS_ENVIRONMENT += ESIO_TEST_OUPUT_DIR=.
 
-# Use parallel HDF5 compiler wrappers per configure.ac
-CC=@H5CC@
-FC=@H5FC@
+# Use MPI compiler wrappers since HDF5 wrappers break autodependencies.
+CC=@MPICC@
+FC=@MPIFC@
 
-## Pick up GRVY library installation
+## Pick up HDF5 library includes
+AM_CFLAGS   += $(HDF5_CFLAGS)
+AM_CPPFLAGS += $(HDF5_CPPFLAGS)
+AM_FCFLAGS  += $(HDF5_FFLAGS)
+
+## Pick up GRVY library includes
 AM_CFLAGS  += $(GRVY_CFLAGS)
 AM_FCFLAGS += $(GRVY_FCFLAGS)
-AM_LDFLAGS += $(GRVY_LIBS)
 
-# FIXME This should not be necessary for C-only tests
-## Pick up Fortran support libraries
-AM_LDFLAGS += $(FCLIBS)
+## FIXME: The C-only tests require $(FCLIBS) to work, which seems wrong
 
 ## Basic C API sanity checks
 TESTS          += basic
 check_PROGRAMS += basic
 basic_SOURCES   = basic.c
 basic_LDADD     = ../esio/libesio.la
+basic_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
 
 ###########################################################################
 ## LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE ##
@@ -47,7 +51,7 @@ EXTRA_DIST          += line_double.sh    # NB Wrapper script
 check_PROGRAMS      += line_double
 line_double_SOURCES  = line_double.c
 line_double_LDADD    = ../esio/libesio.la
-line_double.o: line_double.c line_template.c
+line_double_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
 
 ## Line single precision tests in C
 TESTS               += line_float.sh          # NB Wrapper script
@@ -55,7 +59,7 @@ EXTRA_DIST          += line_float.sh          # NB Wrapper script
 check_PROGRAMS      += line_float
 line_float_SOURCES   = line_float.c
 line_float_LDADD     = ../esio/libesio.la
-line_float.o: line_float.c line_template.c
+line_float_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
 
 ## Line integer tests in C
 TESTS             += line_int.sh          # NB Wrapper script
@@ -63,7 +67,7 @@ EXTRA_DIST        += line_int.sh          # NB Wrapper script
 check_PROGRAMS    += line_int
 line_int_SOURCES   = line_int.c
 line_int_LDADD     = ../esio/libesio.la
-line_int.o: line_int.c line_template.c
+line_int_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
 
 #############################################################################
 ## PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE ##
@@ -75,7 +79,7 @@ EXTRA_DIST           += plane_double.sh    # NB Wrapper script
 check_PROGRAMS       += plane_double
 plane_double_SOURCES  = plane_double.c
 plane_double_LDADD    = ../esio/libesio.la
-plane_double.o: plane_double.c plane_template.c
+plane_double_LDADD   += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
 
 ## Plane single precision tests in C
 TESTS                += plane_float.sh          # NB Wrapper script
@@ -83,7 +87,7 @@ EXTRA_DIST           += plane_float.sh          # NB Wrapper script
 check_PROGRAMS       += plane_float
 plane_float_SOURCES   = plane_float.c
 plane_float_LDADD     = ../esio/libesio.la
-plane_float.o: plane_float.c plane_template.c
+plane_float_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
 
 ## Plane integer tests in C
 TESTS              += plane_int.sh          # NB Wrapper script
@@ -91,7 +95,7 @@ EXTRA_DIST         += plane_int.sh          # NB Wrapper script
 check_PROGRAMS     += plane_int
 plane_int_SOURCES   = plane_int.c
 plane_int_LDADD     = ../esio/libesio.la
-plane_int.o: plane_int.c plane_template.c
+plane_int_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
 
 #############################################################################
 ## LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 ##
@@ -103,7 +107,7 @@ EXTRA_DIST             += layout0_double.sh    # NB Wrapper script
 check_PROGRAMS         += layout0_double
 layout0_double_SOURCES  = layout0_double.c
 layout0_double_LDADD    = ../esio/libesio.la
-layout0_double.o: layout0_double.c layout_template.c
+layout0_double_LDADD   += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
 
 ## Layout 0 single precision tests in C
 TESTS                  += layout0_float.sh          # NB Wrapper script
@@ -111,7 +115,7 @@ EXTRA_DIST             += layout0_float.sh          # NB Wrapper script
 check_PROGRAMS         += layout0_float
 layout0_float_SOURCES   = layout0_float.c
 layout0_float_LDADD     = ../esio/libesio.la
-layout0_float.o: layout0_float.c layout_template.c
+layout0_float_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
 
 ## Layout 0 integer tests in C
 TESTS                += layout0_int.sh          # NB Wrapper script
@@ -119,7 +123,7 @@ EXTRA_DIST           += layout0_int.sh          # NB Wrapper script
 check_PROGRAMS       += layout0_int
 layout0_int_SOURCES   = layout0_int.c
 layout0_int_LDADD     = ../esio/libesio.la
-layout0_int.o: layout0_int.c layout_template.c
+layout0_int_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
 
 #############################################################################
 ## LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 ##
@@ -131,7 +135,7 @@ EXTRA_DIST             += layout1_double.sh    # NB Wrapper script
 check_PROGRAMS         += layout1_double
 layout1_double_SOURCES  = layout1_double.c
 layout1_double_LDADD    = ../esio/libesio.la
-layout1_double.o: layout1_double.c layout_template.c
+layout1_double_LDADD   += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
 
 ## Layout 1 single precision tests in C
 TESTS                  += layout1_float.sh          # NB Wrapper script
@@ -139,7 +143,7 @@ EXTRA_DIST             += layout1_float.sh          # NB Wrapper script
 check_PROGRAMS         += layout1_float
 layout1_float_SOURCES   = layout1_float.c
 layout1_float_LDADD     = ../esio/libesio.la
-layout1_float.o: layout1_float.c layout_template.c
+layout1_float_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
 
 ## Layout 1 integer tests in C
 TESTS                += layout1_int.sh          # NB Wrapper script
@@ -147,14 +151,14 @@ EXTRA_DIST           += layout1_int.sh          # NB Wrapper script
 check_PROGRAMS       += layout1_int
 layout1_int_SOURCES   = layout1_int.c
 layout1_int_LDADD     = ../esio/libesio.la
-layout1_int.o: layout1_int.c layout_template.c
+layout1_int_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
 
-# FIXME Disabled Fortran test
+# FIXME Disabled
 ## Fortran test program to read/write a field
 #noinst_PROGRAMS        += simplef90
 #simplef90_SOURCES       = header.f90 simplef90.f90
 #simplef90_LDADD         = ../esio/libesio.la
-#simplef90_LIBTOOLFLAGS  = --tag=FC
+#simplef90_LDADD        += $(GRVY_LIBS) $(HDF5_FLIBS) $(FCLIBS)
 
 # Build test programs without running 'make check'
 .PHONY: check-programs
