--- a/configure.ac
+++ b/configure.ac
@@ -23,7 +23,7 @@ AC_SUBST([AX_POINT_VERSION])
 AC_CACHE_SAVE
 
 dnl ------------------------------------------------
-dnl Manipulate C compiler settings
+dnl Manipulate C settings and find MPI/HDF5
 dnl ------------------------------------------------
 AX_CHECK_ENABLE_DEBUG
 AC_PROG_CC
@@ -34,18 +34,14 @@ fi
 AX_PATH_GRVY_NEW([0.27],[no])
 AX_CFLAGS_WARN_ALL
 AX_PROG_CC_C99_CFLAGS(,AC_MSG_ERROR([Compiler cannot support ISO C99]))
+ACX_MPI(,AC_MSG_ERROR(Could not find MPI compilation tools for C, e.g. mpicc.))
+AX_MPIP()
+AX_LIB_HDF5([parallel])
 AC_LANG_POP([C])
 AC_CACHE_SAVE
 
 dnl ------------------------------------------------
-dnl Look for HDF5 installation and compiler wrappers
-dnl ------------------------------------------------
-AC_LANG([C])
-AX_LIB_HDF5([parallel])
-AC_CACHE_SAVE
-
-dnl ------------------------------------------------
-dnl Manipulate Fortran compiler settings
+dnl Manipulate Fortran settings and find MPI
 dnl ------------------------------------------------
 AC_PROG_FC
 AC_LANG_PUSH([Fortran])
@@ -54,6 +50,10 @@ if test "x$ax_enable_debug" != "xno"; then
 fi
 AC_FC_WRAPPERS
 AX_FCFLAGS_WARN_ALL
+ACX_MPI(,AC_MSG_ERROR(Could not find MPI compilation tools for Fortran, e.g. mpf90.))
+if test "x$with_hdf5_fortran" != "xyes"; then
+    AC_MSG_WARN([Did not detect HDF5 Fortran support!])
+fi
 AC_LANG_POP([Fortran])
 AC_CACHE_SAVE
 
