esio: add with/without hdf5 pkg-config details
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@15180 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/Makefile.am
+++ b/Makefile.am
@@ -22,7 +22,7 @@ AUX_DIST = build-aux/install-sh        \
 
 # Support for pkgconfig
 pkgconfigdir   = $(libdir)/pkgconfig
-pkgconfig_DATA = esio.pc
+pkgconfig_DATA = esio.pc esio-hdf5.pc
 
 # Files to be deleted by make clean variants
 MOSTLYCLEANFILES = $(DX_CLEANFILES)
