esio: pull package_description into license
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@15181 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/LICENSE.in
+++ b/LICENSE.in
@@ -1,10 +1,8 @@
 //-----------------------------------------------------------------------bl-
 //--------------------------------------------------------------------------
 //
-// ESIO - ExaScale IO library
-//
-// ESIO is a restart file library for HPC exascale IO geared especially for
-// turbulence applications.
+// @PACKAGE_STRING@: @PACKAGE_DESCRIPTION@
+// @PACKAGE_URL@
 //
 // Copyright (C) 2010 The PECOS Development Team
 //
