--- a/license.am
+++ b/license.am
@@ -7,7 +7,7 @@ BUILT_SOURCES += .license.stamp
 
 .license.stamp: $(top_builddir)/LICENSE
 	rm -f .license.stamp
-	for file in $(srcdir)/*.h $(srcdir)/*.c ; do \
+	for file in $(srcdir)/*.h.in $(srcdir)/*.h $(srcdir)/*.c ; do \
 		$(top_srcdir)/build-aux/update_license.pl $(top_builddir)/LICENSE $$file | tee -a $@ ;\
 	done
 	for file in $(srcdir)/*.f90 ; do \
