--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -32,14 +32,12 @@ AM_FCFLAGS  += $(HDF5_FFLAGS)
 AM_CFLAGS  += $(GRVY_CFLAGS)
 AM_FCFLAGS += $(GRVY_FCFLAGS)
 
-## FIXME: The C-only tests require $(FCLIBS) to work, which seems wrong
-
 ## Basic C API sanity checks
 TESTS          += basic
 check_PROGRAMS += basic
 basic_SOURCES   = basic.c
 basic_LDADD     = ../esio/libesio.la
-basic_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
+basic_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS)
 
 ###########################################################################
 ## LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE ##
@@ -50,24 +48,21 @@ TESTS               += line_double.sh    # NB Wrapper script
 EXTRA_DIST          += line_double.sh    # NB Wrapper script
 check_PROGRAMS      += line_double
 line_double_SOURCES  = line_double.c
-line_double_LDADD    = ../esio/libesio.la
-line_double_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
+line_double_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
 
 ## Line single precision tests in C
 TESTS               += line_float.sh          # NB Wrapper script
 EXTRA_DIST          += line_float.sh          # NB Wrapper script
 check_PROGRAMS      += line_float
 line_float_SOURCES   = line_float.c
-line_float_LDADD     = ../esio/libesio.la
-line_float_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
+line_float_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
 
 ## Line integer tests in C
 TESTS             += line_int.sh          # NB Wrapper script
 EXTRA_DIST        += line_int.sh          # NB Wrapper script
 check_PROGRAMS    += line_int
 line_int_SOURCES   = line_int.c
-line_int_LDADD     = ../esio/libesio.la
-line_int_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
+line_int_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
 
 #############################################################################
 ## PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE ##
@@ -78,24 +73,21 @@ TESTS                += plane_double.sh    # NB Wrapper script
 EXTRA_DIST           += plane_double.sh    # NB Wrapper script
 check_PROGRAMS       += plane_double
 plane_double_SOURCES  = plane_double.c
-plane_double_LDADD    = ../esio/libesio.la
-plane_double_LDADD   += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
+plane_double_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
 
 ## Plane single precision tests in C
 TESTS                += plane_float.sh          # NB Wrapper script
 EXTRA_DIST           += plane_float.sh          # NB Wrapper script
 check_PROGRAMS       += plane_float
 plane_float_SOURCES   = plane_float.c
-plane_float_LDADD     = ../esio/libesio.la
-plane_float_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
+plane_float_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
 
 ## Plane integer tests in C
 TESTS              += plane_int.sh          # NB Wrapper script
 EXTRA_DIST         += plane_int.sh          # NB Wrapper script
 check_PROGRAMS     += plane_int
 plane_int_SOURCES   = plane_int.c
-plane_int_LDADD     = ../esio/libesio.la
-plane_int_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
+plane_int_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
 
 #############################################################################
 ## LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 ##
@@ -106,24 +98,21 @@ TESTS                  += layout0_double.sh    # NB Wrapper script
 EXTRA_DIST             += layout0_double.sh    # NB Wrapper script
 check_PROGRAMS         += layout0_double
 layout0_double_SOURCES  = layout0_double.c
-layout0_double_LDADD    = ../esio/libesio.la
-layout0_double_LDADD   += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
+layout0_double_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
 
 ## Layout 0 single precision tests in C
 TESTS                  += layout0_float.sh          # NB Wrapper script
 EXTRA_DIST             += layout0_float.sh          # NB Wrapper script
 check_PROGRAMS         += layout0_float
 layout0_float_SOURCES   = layout0_float.c
-layout0_float_LDADD     = ../esio/libesio.la
-layout0_float_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
+layout0_float_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
 
 ## Layout 0 integer tests in C
 TESTS                += layout0_int.sh          # NB Wrapper script
 EXTRA_DIST           += layout0_int.sh          # NB Wrapper script
 check_PROGRAMS       += layout0_int
 layout0_int_SOURCES   = layout0_int.c
-layout0_int_LDADD     = ../esio/libesio.la
-layout0_int_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
+layout0_int_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
 
 #############################################################################
 ## LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 ##
@@ -134,31 +123,32 @@ TESTS                  += layout1_double.sh    # NB Wrapper script
 EXTRA_DIST             += layout1_double.sh    # NB Wrapper script
 check_PROGRAMS         += layout1_double
 layout1_double_SOURCES  = layout1_double.c
-layout1_double_LDADD    = ../esio/libesio.la
-layout1_double_LDADD   += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
+layout1_double_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
 
 ## Layout 1 single precision tests in C
 TESTS                  += layout1_float.sh          # NB Wrapper script
 EXTRA_DIST             += layout1_float.sh          # NB Wrapper script
 check_PROGRAMS         += layout1_float
 layout1_float_SOURCES   = layout1_float.c
-layout1_float_LDADD     = ../esio/libesio.la
-layout1_float_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
+layout1_float_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
 
 ## Layout 1 integer tests in C
 TESTS                += layout1_int.sh          # NB Wrapper script
 EXTRA_DIST           += layout1_int.sh          # NB Wrapper script
 check_PROGRAMS       += layout1_int
 layout1_int_SOURCES   = layout1_int.c
-layout1_int_LDADD     = ../esio/libesio.la
-layout1_int_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS) $(FCLIBS)
+layout1_int_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+
+#############################################################################
+### FORTRAN TESTS FORTRAN TESTS FORTRAN TESTS FORTRAN TESTS FORTRAN TESTS ###
+#############################################################################
 
 # FIXME Disabled
 ## Fortran test program to read/write a field
 #noinst_PROGRAMS        += simplef90
 #simplef90_SOURCES       = header.f90 simplef90.f90
-#simplef90_LDADD         = ../esio/libesio.la
-#simplef90_LDADD        += $(GRVY_LIBS) $(HDF5_FLIBS) $(FCLIBS)
+#simplef90_LDADD         = ../esio/libesiof.la $(GRVY_LIBS) $(HDF5_FLIBS)
+
 
 # Build test programs without running 'make check'
 .PHONY: check-programs
