esio: add Fortran autodependency generation
Thanks Karl and Paul!

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@15229 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -42,11 +42,14 @@ main_LDADD         = ../esio/libesiof.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
 main_LIBTOOLFLAGS  = --tag=FC
 main.f90: header.o                       # Explicit module dependence
 
-# Clean up Fortran modules on 'make clean'
-CLEANFILES += header.mod
+# Additional files to clean
+CLEANFILES += *.mod *.gcno
 
 # License updates
 include $(top_srcdir)/license.am
+
+# Automatic dependency generation for Fortran
+include $(top_srcdir)/sfmakedepend.am
 
 # Required for AX_AM_MACROS
 @INC_AMINCLUDE@
