--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -54,5 +54,8 @@ clean-local:
 # License updates
 include $(top_srcdir)/license.am
 
+# Automatic dependency generation for Fortran
+include $(top_srcdir)/sfmakedepend.am
+
 # Required for AX_AM_MACROS
 @INC_AMINCLUDE@
