esio: add --enable-jobserver
Now that -j9's working for Fortran, add this
to speed development builds.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@15232 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -18,6 +18,7 @@ AM_INIT_AUTOMAKE(1.9 no-define tar-ustar -Wall -Werror foreign)
 AC_PREREQ([2.61])
 AX_AM_MACROS
 AX_ADD_AM_CTAGSFLAGS
+AX_AM_JOBSERVER([no])
 AX_SPLIT_VERSION
 AC_SUBST([AX_MAJOR_VERSION])
 AC_SUBST([AX_MINOR_VERSION])
