esio: #1108 draft esio_attribute_sizev
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@15413 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -36,6 +36,7 @@ include_HEADERS += esio.h
 include_HEADERS += version.h
 
 # Headers internal to the library
+noinst_HEADERS += h5utils.h
 noinst_HEADERS += layout.h
 noinst_HEADERS += metadata.h
 
