esio: string set/get draft
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@15429 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -43,6 +43,17 @@ basic_LDADD     = ../esio/libesio.la
 basic_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS)
 
 ###########################################################################
+## STRING STRING STRING STRING STRING STRING STRING STRING STRING STRING ##
+###########################################################################
+
+## String tests in C
+TESTS          += string.sh    # NB Wrapper script
+EXTRA_DIST     += string.sh    # NB Wrapper script
+check_PROGRAMS += string
+string_SOURCES  = string.c
+string_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+
+###########################################################################
 ## ATTRIBUTE ATTRIBUTE ATTRIBUTE ATTRIBUTE ATTRIBUTE ATTRIBUTE ATTRIBUTE ##
 ###########################################################################
 
