esio: correct extra_dist for make distcheck
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@15431 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -12,6 +12,7 @@ include_HEADERS    = # Append below
 lib_LTLIBRARIES    = # Append below
 noinst_HEADERS     = # Append below
 noinst_LTLIBRARIES = # Append below
+EXTRA_DIST         = # Append below
 
 # Use MPI compiler wrappers since HDF5 wrappers break autodependencies.
 CC=@MPICC@
@@ -40,6 +41,12 @@ include_HEADERS += version.h
 noinst_HEADERS += h5utils.h
 noinst_HEADERS += layout.h
 noinst_HEADERS += metadata.h
+
+# Templated implementation files which must ship too
+EXTRA_DIST += layout0.c
+EXTRA_DIST += layout1.c
+EXTRA_DIST += plane.c
+EXTRA_DIST += line.c
 
 # Public Fortran library is a superset of libesio.la
 noinst_LTLIBRARIES       += libesiof.la
